# gg20

./: .gitignore  .gitpod.dockerfile  LICENSE  README.md  gg20.cabal  stack.yaml
src/: Main.hs
