name:                gg20
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/chenmoucheng/gg20#readme
license:             BSD3
license-file:        LICENSE
author:              Chen-Mou Cheng
maintainer:          chenmou.cheng@gmail.com
copyright:           2021 Chen-Mou Cheng
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable gg20
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , finite-field
                     , extra
                     , Paillier
                     , QuickCheck
                     , random
                     , secp256k1-haskell
